<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".Equipes">

    <Button
        android:id="@+id/btnEquipeVoltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="clickVoltar"
        android:text="@string/strVoltar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/strEquipesTitulo"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEquipeVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAmerica"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickAmerica"
                app:srcCompat="@drawable/america" />

            <ImageView
                android:id="@+id/imgCap"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickCap"
                app:srcCompat="@drawable/athleticocap" />

            <ImageView
                android:id="@+id/imgAcg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickAcg"
                app:srcCompat="@drawable/atleticogo" />

            <ImageView
                android:id="@+id/imgCam"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickCam"
                app:srcCompat="@drawable/atleticomg" />

            <ImageView
                android:id="@+id/imgAvai"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickAvai"
                app:srcCompat="@drawable/avai" />

            <ImageView
                android:id="@+id/imgBotafogo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickBotafogo"
                app:srcCompat="@drawable/botafogo" />

            <ImageView
                android:id="@+id/imgRbb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickRbb"
                app:srcCompat="@drawable/bragantino" />

            <ImageView
                android:id="@+id/imgCeara"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickCeara"
                app:srcCompat="@drawable/ceara" />

            <ImageView
                android:id="@+id/imgCorinthians"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickCorinthians"
                app:srcCompat="@drawable/corinthians" />

            <ImageView
                android:id="@+id/imgCoritiba"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickCoritiba"
                app:srcCompat="@drawable/coritiba" />

            <ImageView
                android:id="@+id/imgCuiaba"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickCuiaba"
                app:srcCompat="@drawable/cuiaba" />

            <ImageView
                android:id="@+id/imgFla"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickFla"
                app:srcCompat="@drawable/flamengo" />

            <ImageView
                android:id="@+id/imgFlu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickFlu"
                app:srcCompat="@drawable/fluminense" />

            <ImageView
                android:id="@+id/imgFort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickFort"
                app:srcCompat="@drawable/fortaleza" />

            <ImageView
                android:id="@+id/imgGoias"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickGoias"
                app:srcCompat="@drawable/goias" />

            <ImageView
                android:id="@+id/imgInter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickInter"
                app:srcCompat="@drawable/internacional" />

            <ImageView
                android:id="@+id/imgJuventude"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickJuventude"
                app:srcCompat="@drawable/juventude" />

            <ImageView
                android:id="@+id/imgPal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickPal"
                app:srcCompat="@drawable/palmeiras" />

            <ImageView
                android:id="@+id/imgSantos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickSantos"
                app:srcCompat="@drawable/santos" />

            <ImageView
                android:id="@+id/imgSpfc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:onClick="clickSpfc"
                app:srcCompat="@drawable/spfc" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>